<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FormularioAdocao"
    tools:showIn="@layout/activity_formulario_adocao">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <!--nomeAnimal-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nomeAnimal"
            android:id="@+id/textView2" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_nomeAnimal" />

        <!--cpf-->
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cpf"
            android:id="@+id/textView3" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_cpf" />

        <!--descricao-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/descricao"
            android:id="@+id/textView4" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_descricao" />

        <!--nomeAnunciante-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nomeAnunciante"
            android:id="@+id/textView5" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_nomeAnunciante" />

        <!--telefone-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/telefone"
            android:id="@+id/textView6" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_telefone" />

        <!--especie-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/especie"
            android:id="@+id/textView7" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_especie" />

        <!--sexo-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sexo"
            android:id="@+id/textView8" />
            <RadioGroup android:id="@+id/rg_sexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton android:text="@string/macho"
                    android:id="@+id/macho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></RadioButton>

                <RadioButton android:text="@string/femea"
                    android:id="@+id/femea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></RadioButton>

            </RadioGroup>

        <!--peso-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/peso"
            android:id="@+id/textView9" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_peso" />

        <!--idade-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/idade"
            android:id="@+id/textView10" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_idade" />

        <!--pelagem-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pelagem"
            android:id="@+id/textView11" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_pelagem" />

        <!--raca-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/raca"
            android:id="@+id/textView12" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_raca" />

        <!--isCastrado-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/castrado"
            android:id="@+id/textView13" />
            <RadioGroup android:id="@+id/rg_isCastrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton android:text="@string/sim"
                    android:id="@+id/sim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></RadioButton>

                <RadioButton android:text="@string/nao"
                    android:id="@+id/nao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></RadioButton>

            </RadioGroup>

        <!--linkVideo-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/linkVideo"
            android:id="@+id/textView14" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_linkVideo" />

        <!--cidade-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cidade"
            android:id="@+id/textView15" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_cidade" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_salvar"
                    android:id="@+id/button5"
                    android:onClick="salvar"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_cancelar"
                    android:id="@+id/button6"
                    android:onClick="cancelar"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_excluir"
                    android:id="@+id/bt_excluir"
                    android:onClick="excluir"
                    android:enabled="false"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
